# django-migrate-fresh

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.py
.github/workflows/: coverage.yml
django_migrate_fresh/: manage.py  settings.py
django_migrate_fresh/django_migrate_fresh/: asgi.py  settings.py  urls.py  wsgi.py
django_migrate_fresh/management/commands/: migrate_fresh.py
tests/: test_ai_features.py  test_migrate_fresh.py  test_performance_features.py  test_settings.py  urls.py
