[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django-migrate-fresh"
version = "3.1.0"
description = "Simple Django package for Laravel-style migrate:fresh functionality with backup support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sepehr Mohseni", email = "isepehrmohseni@gmail.com"},
]
keywords = ["django", "migration", "laravel", "migrate", "fresh", "backup"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-django>=4.0",
]

[project.urls]
Homepage = "https://github.com/sepehr-mohseni/django-migrate-fresh"
Repository = "https://github.com/sepehr-mohseni/django-migrate-fresh"
Issues = "https://github.com/sepehr-mohseni/django-migrate-fresh/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]